# claude-telegram-bots

./: .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  backup.sh  bots-active.txt  install.sh  kg.db  kg.db.bak-20260411-140125  kg.db.bak-20260411-140301  madial-bench.db  patch-server.sh  setup-claude-bot.sh  start-bots.sh
benchmarks/: clsc-ab-benchmark-v2.py  divergence-log-schema.json  gbrain-cmrc-drcd-benchmark.ts  internal-200-gold.json  latency-results-phase1-20260512.json  latency-sample-queries.txt  memory-snapshot-20260412.json  ocean-search-shape-fixture.json  privacy-probe-terms.txt  results-clsc-ab-20260416.json  results-cmrc-20260416.json  results-drcd-20260416.json  results-final-20260417.md  results-full-20260414.json  results-internal-300-20260417.json  results-internal-300-20260417.md  results-phase1-20260513T120354.json  results-scifact-20260416.json  results-semantic-20260414.json  test_gbrain_fault_matrix.py  test_ocean_search_shape.py  work-scenario-200.json  work-scenario-200.json.bak  work-scenario-200.json.bak-20260414  work-scenario-200.json.bak-round1  work-scenario-300.json
docs/: TOOLS-001-install-report.md  automation-registry.md  memocean-semantic-search-spec.md
logs/: canonical-benchmark-20260411-142959.json  canonical-benchmark-20260411-142959.md  (+37 more)
shared/channellab-kb-mcp/: README.md  pyproject.toml
shared/channellab-kb-mcp/channellab_kb_mcp/: __main__.py  config.py  server.py
shared/channellab-kb-mcp/channellab_kb_mcp/tools/: closet_get.py  closet_search.py  task_create.py
shared/channellab-kb-mcp/tests/: test_tools.py
(+295 files in other folders)
