[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "channellab-kb-mcp"
version = "0.1.0"
description = "ChannelLab Knowledge Base MCP server — library mode, local only"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
channellab-kb-mcp = "channellab_kb_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
